<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="20dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/paybooc_b"
        android:text="@string/ask_real_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/light_gray"
            android:textColor="@color/black"
            android:fontFamily="@font/paybooc_b"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/txt_msg" />

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/app_primary_color"
            android:fontFamily="@font/paybooc_b"
            android:text="@string/remove"
            app:layout_constraintTop_toBottomOf="@id/txt_msg" />

    </LinearLayout>

</LinearLayout>