<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:id="@+id/searchFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.SearchFragment">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/menu_item_color"
            app:tabRippleColor="#00000000"
            app:tabSelectedTextColor="@color/app_primary_color"
            app:tabTextAppearance="@style/tab_text"
            app:tabTextColor="@color/gray">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/falName" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyWord" />


        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_edge_black"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/paybooc_b"
                        android:hint="@string/falHint"
                        android:inputType="text"
                        android:imeOptions="actionSearch"
                        android:paddingStart="15dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/light_gray"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/btn_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:paddingEnd="10dp"
                        android:src="@drawable/ic_cancel"
                        android:visibility="gone" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/ugro_m"
                android:text="@string/recent"
                android:textColor="@color/light_blue"
                android:textSize="13sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </LinearLayout>

</layout>
