<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.camping.viewModel.MainViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/mainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:orientation="vertical"
        tools:context=".view.MainFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingTop="35dp"
                    android:paddingBottom="35dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/ugro_b"
                        android:text="@string/app_name_kor"
                        android:textColor="@color/app_primary_color"
                        android:textSize="22sp" />

                </LinearLayout>

                <!-- 오토캠핑 글램핑 카라반 이미지 버튼 -->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white">

                    <TableRow>

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="39dp"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:onClick="@{() -> viewModel.onClickAutoCamping()}"
                            android:scaleType="fitCenter"
                            android:src="@drawable/auto" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:onClick="@{() -> viewModel.onClickGlamPing()}"
                            android:scaleType="fitCenter"
                            android:src="@drawable/glamping" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:onClick="@{() -> viewModel.onClickCaravan()}"
                            android:scaleType="fitCenter"
                            android:src="@drawable/caravan" />

                    </TableRow>
                </TableLayout>

                <!-- 오토캠핑 글램핑 카라반 텍스트 -->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:paddingBottom="10dp">

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/ugro_m"
                            android:gravity="center"
                            android:text="@string/auto"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/ugro_m"
                            android:gravity="center"
                            android:text="@string/glamping"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/ugro_m"
                            android:gravity="center"
                            android:text="@string/caravan"
                            android:textColor="@color/black"
                            android:textSize="13sp" />


                    </TableRow>
                </TableLayout>

                <!-- 추천 야영지 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/ugro_b"
                        android:text="@string/recommend"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="180dp">

                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/viewpager"
                            image="@{viewModel.fragments}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clipChildren="false"
                            android:clipToPadding="false"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:id="@+id/txt_image_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/round_edge_transparent"
                            android:paddingStart="10dp"
                            android:paddingTop="3dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="3dp"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </RelativeLayout>
                </LinearLayout>

                <!-- 추천 4개 여행지역 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/ugro_b"
                            android:text="@string/recommend_theme"
                            android:textColor="@color/app_primary_color"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/ugro_b"
                            android:text="@string/recommend_area"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp">

                        <TableRow>

                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/white"
                                android:onClick="@{() -> viewModel.onClickSea()}"
                                android:scaleType="fitCenter"
                                android:src="@drawable/sea" />

                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/white"
                                android:onClick="@{() -> viewModel.onClickMountain()}"
                                android:scaleType="fitCenter"
                                android:src="@drawable/mountain" />

                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/white"
                                android:onClick="@{() -> viewModel.onClickValley()}"
                                android:scaleType="fitCenter"
                                android:src="@drawable/valley" />

                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/white"
                                android:onClick="@{() -> viewModel.onClickFishing()}"
                                android:scaleType="fitCenter"
                                android:src="@drawable/fishing" />

                        </TableRow>
                    </TableLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TableRow>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:fontFamily="@font/ugro_m"
                                android:gravity="center"
                                android:text="@string/sea"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/ugro_m"
                                android:gravity="center"
                                android:text="@string/mountain"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/ugro_m"
                                android:gravity="center"
                                android:text="@string/valley"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/ugro_m"
                                android:gravity="center"
                                android:text="@string/fishing"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                        </TableRow>

                    </TableLayout>

                </LinearLayout>

                <!-- 반려견 여행 -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ugro_b"
                        android:text="@string/pet"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.widget.Button
                        android:layout_width="70dp"
                        android:layout_height="25dp"
                        android:background="@drawable/round_edge_blue"
                        android:drawableEnd="@drawable/ic_arrow_right_24"
                        android:onClick="@{() -> viewModel.onClickPet()}"
                        android:paddingStart="10dp"
                        android:text="@string/more"
                        android:textColor="@color/light_blue"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    app:items="@{viewModel.list}" />
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/app_primary_color"
            android:visibility="gone" />

    </RelativeLayout>

</layout>
